`Removed various HTML, CSS, and JavaScript files from the Accounting project, including front-end code for the dashboard, invoices, expenses, and budget pages.`

--- a/Invoice_recieved/Invoice_received.html
+++ b/Invoice_recieved/Invoice_received.html
@@ -67,11 +67,11 @@
             <div class="accordion-header">Contabilidad</div>
             <div class="accordion-content open">
                 <ul class="sidebar-menu">
-                    <li><a href="https://upsenconsulting-prog.github.io/UPSEN-Accounting/" class="sidebar-link">Panel de control</a></li>
-                    <li><a href="https://upsenconsulting-prog.github.io/UPSEN-Accounting/expense/expense.html" class="sidebar-link">Gastos</a></li>
-                    <li><a href="https://upsenconsulting-prog.github.io/UPSEN-Accounting/Invoice-issued/invoice-issued.html" class="sidebar-link">Facturas Emitidas</a></li>
-                    <li class="active"><a href="https://upsenconsulting-prog.github.io/UPSEN-Accounting/Invoice_recieved/Invoice_received.html" class="sidebar-link">Facturas Recibidas</a></li>
-                    <li><a href="https://upsenconsulting-prog.github.io/UPSEN-Accounting/budgetPage/budget.html" class="sidebar-link">Presupuestos</a></li>
+                    <li><a href="../public/frontPage/frontPage.html" class="sidebar-link">Panel de control</a></li>
+                    <li><a href="../expense/expense.html" class="sidebar-link">Gastos</a></li>
+                    <li><a href="../Invoice-issued/invoice-issued.html" class="sidebar-link">Facturas Emitidas</a></li>
+                    <li class="active"><a href="../public/Invoice_recieved/Invoice_recieved.html" class="sidebar-link">Facturas Recibidas</a></li>
+                    <li><a href="../budgetPage/budget.html" class="sidebar-link">Presupuestos</a></li>
                     <li><a href="#help" class="sidebar-link">Ayuda</a></li>
                 </ul>
             </div>
