--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
     <title>Redirect to Frontpage</title>
-    <meta http-equiv="refresh" content="0; url=frontPage/frontPage.html">
+    <meta http-equiv="refresh" content="0; url=./public/frontPage/frontPage.html">
 </head>
 <body>
-    <p>Redirecting to <a href="frontPage/frontPage.html">Frontpage</a>...</p>
+    <p>Redirecting to <a href="./public/frontPage/frontPage.html">Frontpage</a>...</p>
 </body>
 </html>
+
