--- a/public/Invoice_recieved/Invoice_recieved.html
+++ b/public/Invoice_recieved/Invoice_recieved.html
@@ -775,7 +775,71 @@
       </main>
     </div>
   </div>
+    <!-- Modal Nueva Factura Recibida -->
+    <div class="modal fade" id="modalNewInvoice" tabindex="-1" aria-labelledby="modalNewInvoiceLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="modalNewInvoiceLabel">Nueva factura recibida</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+          </div>
 
+        <div class="modal-body">
+          <form id="formNewInvoice">
+            <div class="row g-3">
+              <div class="col-md-4">
+                <label class="form-label">Número de factura</label>
+                <input type="text" name="invoiceNumber" class="form-control" placeholder="Ej: REC-2025-001" required />
+              </div>
+
+              <div class="col-md-4">
+                <label class="form-label">Fecha</label>
+                <input type="date" name="invoiceDate" class="form-control" required />
+              </div>
+
+              <div class="col-md-4">
+                <label class="form-label">Importe (€)</label>
+                <input type="number" step="0.01" name="amount" class="form-control" placeholder="0.00" required />
+              </div>
+
+              <div class="col-md-8">
+                <label class="form-label">Proveedor</label>
+                <input type="text" name="supplier" class="form-control" placeholder="Nombre del proveedor" required />
+              </div>
+
+              <div class="col-md-4">
+                <label class="form-label">Estado</label>
+                <select name="state" class="form-select">
+                  <option value="Pendiente" selected>Pendiente</option>
+                  <option value="Pagada">Pagada</option>
+                  <option value="Vencida">Vencida</option>
+                </select>
+              </div>
+            </div>
+          </form>
+        </div>
+
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+          <button type="button" class="btn btn-primary" id="saveInvoiceBtn">Guardar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+    <!-- Modal Nueva Factura por OCR -->
+    <div class="modal fade" id="modalNewInvoiceOCR" tabindex="-1" aria-labelledby="modalNewInvoiceOCRLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="modalNewInvoiceOCRLabel">Nueva factura recibida por OCR</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+          </div>
+
+        <div class="modal-body">
+          <form id="formNewInvoiceOCR">
+            <div class="mb-3">
+              <label class="form-label
   <!-- JS ORIGINAL — APENAS TEXTOS DE ALERT TRADUZIDOS -->
   <script>
     window.addEventListener("load", function () {
@@ -939,63 +1003,11 @@
         window.location.href = href;
       });
     });
-//Modal nueva factura
-<div class="modal fade" id="modalNewInvoice" tabindex="-1" aria-labelledby="modalNewInvoiceLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="modalNewInvoiceLabel">Nueva factura recibida</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
-      </div>
-
-      <div class="modal-body">
-        <form id="formNewInvoice">
-          <div class="row g-3">
-            <div class="col-md-4">
-              <label class="form-label">Número de factura</label>
-              <input type="text" name="invoiceNumber" class="form-control" placeholder="Ej: REC-2025-001" required />
-            </div>
-
-            <div class="col-md-4">
-              <label class="form-label">Fecha</label>
-              <input type="date" name="invoiceDate" class="form-control" required />
-            </div>
-
-            <div class="col-md-4">
-              <label class="form-label">Importe (€)</label>
-              <input type="number" step="0.01" name="amount" class="form-control" placeholder="0.00" required />
-            </div>
-
-            <div class="col-md-8">
-              <label class="form-label">Proveedor</label>
-              <input type="text" name="supplier" class="form-control" placeholder="Nombre del proveedor" required />
-            </div>
-
-            <div class="col-md-4">
-              <label class="form-label">Estado</label>
-              <select name="state" class="form-select">
-                <option value="Pendiente" selected>Pendiente</option>
-                <option value="Pagada">Pagada</option>
-                <option value="Vencida">Vencida</option>
-              </select>
-            </div>
-          </div>
-        </form>
-      </div>
-
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-        <button type="button" class="btn btn-primary" id="saveInvoiceBtn">Guardar</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-
     // Accordion standardmäßig öffnen
     document.querySelector('.accordion-content').classList.add('open');
   </script>
+
   <script src= "https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script type=""module" src="./Invoice_recieved.js"></script>
+  <script type="module" src="./Invoice_recieved.js"></script>
 </body>
 </html>
