--- a/public/expense/expense.html
+++ b/public/expense/expense.html
@@ -623,9 +623,47 @@
     });
 
     // New Expense Button
-    document.getElementById('newExpenseBtn').addEventListener('click', function() {
-      alert('Aquí aparecería el diálogo de nuevo gasto');
-    });
+    <!-- Modal Nuevo gasto -->
+<div class="modal fade" id="modalNewExpense" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Nuevo gasto</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+      </div>
+
+      <div class="modal-body">
+        <form id="formNewExpense">
+          <div class="mb-3">
+            <label class="form-label">Fecha</label>
+            <input type="date" name="date" class="form-control" required />
+          </div>
+
+          <div class="mb-3">
+            <label class="form-label">Categoría</label>
+            <input type="text" name="category" class="form-control" required />
+          </div>
+
+          <div class="mb-3">
+            <label class="form-label">Importe (€)</label>
+            <input type="number" step="0.01" name="amount" class="form-control" required />
+          </div>
+
+          <div class="mb-3">
+            <label class="form-label">Notas</label>
+            <input type="text" name="notes" class="form-control" />
+          </div>
+        </form>
+      </div>
+
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+        <button type="button" class="btn btn-primary" id="saveExpenseBtn">Guardar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 
     // Refresh button
     document.getElementById('refreshBtn').addEventListener('click', function() {
