--- a/public/Invoice-issued/invoice-issued.html
+++ b/public/Invoice-issued/invoice-issued.html
@@ -643,19 +643,19 @@
         <div class="cards-container">
           <div class="card summary-card">
             <h2>Pagos pendientes</h2>
-            <p><strong>€2.450,00</strong></p>
+            <p><strong id="pendingTotal">€0,00</strong></p>
           </div>
           <div class="card summary-card">
             <h2>Facturas vencidas</h2>
-            <p><strong>€890,00</strong></p>
+            <p><strong id="overdueTotal">€0,00</strong></p>
           </div>
           <div class="card summary-card">
             <h2>Creadas este mes</h2>
-            <p><strong>12 facturas</strong></p>
+            <p><strong id="monthlyCount">0 facturas</strong></p>
           </div>
           <div class="card summary-card">
             <h2>Importe promedio</h2>
-            <p><strong>€204,17</strong></p>
+            <p><strong id="averageAmount">€0,00</strong></p>
           </div>
         </div>
 
