--- a/public/expense/expense.html
+++ b/public/expense/expense.html
@@ -603,15 +603,15 @@
         <div class="cards-container">
           <div class="card summary-card">
             <h2>Gastos mensuales</h2>
-            <p><strong>€470,00</strong></p>
+            <p><strong id="monthlyTotal">€0,00</strong></p>
           </div>
           <div class="card summary-card">
             <h2>Categoría con mayor coste</h2>
-            <p><strong>Gastos de viaje</strong></p>
+            <p><strong id="topCategory">Sin datos</strong></p>
           </div>
           <div class="card summary-card">
             <h2>Último gasto</h2>
-            <p>10.09.2025 – Viaje en tren</p>
+            <p id="lastExpense">Sin gastos</p>
           </div>
         </div>
 
