--- a/public/Invoice_recieved/Invoice_recieved.html
+++ b/public/Invoice_recieved/Invoice_recieved.html
@@ -657,6 +657,12 @@
       color: #2c3e50;
     }
 
+    /* Chart container */
+    .chart-container {
+      position: relative;
+      height: 250px;
+    }
+
     /* ... TODO O CSS PERMANECE IGUAL ... */
   </style>
 </head>
@@ -750,7 +756,7 @@
           </div>
           <div class="card summary-card">
             <h2>Recibidas este mes</h2>
-            <p><strong>8 facturas</strong></p>
+            <p><strong id="monthlyCount">0 facturas</strong></p>
           </div>
           <div class="card summary-card">
             <h2>Importe medio</h2>
@@ -812,8 +818,8 @@
         <!-- Charts -->
         <div class="card">
           <h2 class="card-header">Evolución de gastos</h2>
-          <div class="chart-placeholder">
-            Gráfico de facturas recibidas y salidas de pagos
+          <div class="chart-container" style="height: 250px;">
+            <canvas id="receivedChartCanvas"></canvas>
           </div>
         </div>
 
@@ -894,6 +900,7 @@
     </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   
   <!-- JS SIMPLIFICADO - Eventos principais apenas -->
   <script>
