facturas recebidas e emitidas e gastos feitos

--- a/public/Invoice-issued/invoice-issued.html
+++ b/public/Invoice-issued/invoice-issued.html
@@ -610,7 +610,7 @@
             <div class="accordion-header">Accounting</div>
             <div class="accordion-content open">
                 <ul class="sidebar-menu">
-                    <li><a href="../frontPage/frontPage.html" class="sidebar-link">Dashboard</a></li>
+                    <li><a href="../frontPage/frontPage.html" class="sidebar-link">Painel de Control</a></li>
                     <li><a href="../expense/expense.html" class="sidebar-link">Gastos</a></li>
                     <li class="active"><a href="invoice-issued.html" class="sidebar-link">Facturas Emitidas</a></li>
                     <li><a href="../Invoice_recieved/Invoice_recieved.html" class="sidebar-link">Facturas recibidas</a></li>
