--- a/public/Invoice_recieved/Invoice_recieved.html
+++ b/public/Invoice_recieved/Invoice_recieved.html
@@ -899,6 +899,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="../shared/store.js"></script>
   
   <!-- JS SIMPLIFICADO - Eventos principais apenas -->
   <script>
@@ -993,7 +994,8 @@
     }
   </script>
   
-  <script type="module" src="./Invoice_recieved.js"></script>
+  <script src="./Invoice_recieved.js"></script>
 </body>
 </html>
+
 
