--- a/public/budgetPage/budget.html
+++ b/public/budgetPage/budget.html
@@ -270,70 +270,18 @@ h3 {
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="../shared/auth.js"></script>
+<script src="../shared/store.js"></script>
 <script>
-// Store functions
-const STORAGE_KEY = 'upsen_budgets';
+// Usar o sistema integrado do AuthManager e store.js
+// As funções globais já estão disponíveis: window.getBudgets(), window.addBudget(), etc.
 
-function getBudgets() {
-  try {
-    return JSON.parse(localStorage.getItem(STORAGE_KEY)) || [];
-  } catch {
-    return [];
-  }
-}
-
-function saveBudgets(budgets) {
-  localStorage.setItem(STORAGE_KEY, JSON.stringify(budgets));
-}
-
-function uid() {
-  return 'id-' + Date.now() + '-' + Math.random().toString(36).substr(2, 9);
-}
-
-function addBudget(data) {
-  const list = getBudgets();
-  const item = {
-    id: uid(),
-    number: data.number || '',
-    date: data.date || '',
-    validity: data.validity || '',
-    customer: data.customer || '',
-    notes: data.notes || '',
-    retention: data.retention || '',
-    status: data.status || 'pending',
-    tags: data.tags || '',
-    items: data.items || [],
-    total: Number(data.total) || 0,
-    createdAt: new Date().toISOString()
-  };
-  list.push(item);
-  saveBudgets(list);
-  return item;
-}
-
-function deleteBudget(id) {
-  const list = getBudgets().filter(b => b.id !== id);
-  saveBudgets(list);
-}
-
-function updateBudget(id, updates) {
-  const list = getBudgets();
-  const index = list.findIndex(b => b.id === id);
-  if (index !== -1) {
-    list[index] = { ...list[index], ...updates };
-    saveBudgets(list);
-    return list[index];
-  }
-  return null;
-}
-
-// Utility functions
 function moneyEUR(n) {
   return '€' + (Number(n) || 0).toFixed(2);
 }
 
 function generateBudgetNumber() {
-  const budgets = getBudgets();
+  const budgets = window.getBudgets();
   if (budgets.length === 0) {
     return 'BUD-001';
   }
@@ -448,7 +396,7 @@ function saveBudget() {
     return;
   }
   
-  addBudget(data);
+  window.addBudget(data);
   alert('Presupuesto guardado correctamente!');
   clearForm();
 }
@@ -462,7 +410,7 @@ function loadSavedBudgets() {
   const tbody = document.getElementById('budgetsTbody');
   if (!tbody) return;
   
-  const budgets = getBudgets();
+  const budgets = window.getBudgets();
   
   if (budgets.length === 0) {
     tbody.innerHTML = '<tr><td colspan="6" class="text-center">No hay presupuestos guardados</td></tr>';
@@ -504,7 +452,7 @@ function loadSavedBudgets() {
 
 // Show view budget modal
 function showViewBudget(id) {
-  const budget = getBudgets().find(b => b.id === id);
+  const budget = window.getBudgets().find(b => b.id === id);
   if (!budget) return;
   
   const itemsHtml = budget.items?.map(item => `
@@ -557,9 +505,9 @@ function showViewBudget(id) {
 
 // Delete budget item
 function deleteBudgetItem(id) {
-  const budget = getBudgets().find(b => b.id === id);
+  const budget = window.getBudgets().find(b => b.id === id);
   if (budget && confirm('¿Eliminar presupuesto ' + budget.number + '?')) {
-    deleteBudget(id);
+    window.deleteBudget(id);
     loadSavedBudgets();
   }
 }
