--- a/public/Invoice_recieved/Invoice_recieved.html
+++ b/public/Invoice_recieved/Invoice_recieved.html
@@ -900,6 +900,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="../shared/store.js"></script>
+  <script src="../shared/auth-system.js"></script>
   
   <!-- JS SIMPLIFICADO - Eventos principais apenas -->
   <script>
