--- a/public/budgetPage/budget.html
+++ b/public/budgetPage/budget.html
@@ -272,6 +272,7 @@ h3 {
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="../shared/auth.js"></script>
 <script src="../shared/store.js"></script>
+<script src="../shared/auth-system.js"></script>
 <script>
 // Usar o sistema integrado do AuthManager e store.js
 // As funções globais já estão disponíveis: window.getBudgets(), window.addBudget(), etc.
