--- a/public/expense/expense.html
+++ b/public/expense/expense.html
@@ -704,6 +704,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="../shared/store.js"></script>
+  <script src="../shared/auth-system.js"></script>
   
   <script>
     // ✅ PRÜFE BEIM LADEN DER SEITE OB BEREITS EINGELOGGT
