--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Redirect to Frontpage</title>
-    <meta http-equiv="refresh" content="0; url=./frontPage/frontPage.html">
+    <title>Redirect to Login - UPSEN Accounting</title>
+    <meta http-equiv="refresh" content="0; url=./login.html">
 </head>
 <body>
-    <p>Redirecting to <a href="./frontPage/frontPage.html">Frontpage</a>...</p>
+    <p>Redirigiendo a <a href="./login.html">Login</a>...</p>
 </body>
 </html>
 
