--- a/public/frontPage/frontPage.html
+++ b/public/frontPage/frontPage.html
@@ -685,10 +685,10 @@
         <div class="user-profile">
           <div class="avatar" id="userMenuBtn">JS</div>
           <span>John Smith</span>
-          <div class="dropdown-menu" id="userDropdown">
-            <div class="dropdown-item">Perfil</div>
-            <div class="dropdown-item">Configuración</div>
-            <div class="dropdown-item" id="logoutBtn">Cerrar sesión</div>
+<div class="dropdown-menu" id="userDropdown">
+            <a href="../profile/profile.html" class="dropdown-item" style="text-decoration: none; display: block;">Perfil</a>
+            <a href="../profile/settings.html" class="dropdown-item" style="text-decoration: none; display: block;">Configuración</a>
+            <div class="dropdown-item" id="logoutBtn" style="color: #e74c3c;">Cerrar sesión</div>
           </div>
         </div>
       </div>
