--- a/public/budgetPage/budget.html
+++ b/public/budgetPage/budget.html
@@ -338,6 +338,14 @@
   </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+<!-- Firebase SDKs -->
+<script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-auth-compat.js"></script>
+
+<!-- Firebase Config & Auth -->
+<script src="../shared/firebase-config.js"></script>
 <script src="../shared/auth-system.js"></script>
 <script src="script.js"></script>
 </body>
