`Refactor code to remove Firebase and localStorage usage, update UI and functionality to match new requirements`

--- a/public/profile/profile.html
+++ b/public/profile/profile.html
@@ -67,8 +67,6 @@
     .spinner { width: 45px; height: 45px; border: 4px solid #e9ecef; border-top-color: #2a4d9c; border-radius: 50%; animation: spin 0.8s linear infinite; }
     @keyframes spin { to { transform: rotate(360deg); } }
     .hidden { display: none !important; }
-    .btn-logout { background: rgba(231, 76, 60, 0.15); color: #e74c3c; border: none; margin: 20px; margin-top: auto; width: calc(100% - 40px); font-size: 0.95em; padding: 12px 15px; }
-    .btn-logout:hover { background: #e74c3c; color: white; }
     @media (max-width: 992px) { .sidebar { position: relative; width: 100%; min-height: auto; } .main-content { margin-left: 0; } }
   </style>
 </head>
@@ -86,7 +84,6 @@
         <li class="active"><a href="profile.html" class="sidebar-link"><i class="fas fa-user"></i> Perfil</a></li>
         <li><a href="settings.html" class="sidebar-link"><i class="fas fa-cog"></i> Configuracion</a></li>
       </ul>
-      <button class="btn btn-logout" onclick="logout()"><i class="fas fa-sign-out-alt me-2"></i>Cerrar sesion</button>
     </aside>
     <main class="main-content col">
       <div class="page-header">
@@ -170,6 +167,7 @@
           <button class="btn btn-success" onclick="showPasswordModal()"><i class="fas fa-lock me-2"></i>Password</button>
           <button class="btn btn-info" onclick="exportDataPDF()"><i class="fas fa-file-pdf me-2"></i>PDF</button>
           <button class="btn btn-danger" onclick="deleteAccount()"><i class="fas fa-trash me-2"></i>Eliminar</button>
+          <button class="btn btn-warning" onclick="logout()" style="background: #f39c12; border: none; color: white;"><i class="fas fa-sign-out-alt me-2"></i>Cerrar sesion</button>
         </div>
       </div>
     </main>
@@ -296,10 +294,48 @@ async function saveProfile() {
   var currency = document.getElementById('editCurrency').value;
   var language = document.getElementById('editLanguage').value;
   var theme = document.getElementById('editTheme').value;
+  
   if (!name || !company) { showAlert('editAlert', 'Completa todos los campos.', 'error'); return; }
-  var res = await AuthSystem.updateProfile({name:name, company:company, phone:phone, settings:{currency:currency, language:language, theme:theme}});
-  if (res.success) { editModal.hide(); loadProfile(); showAlert('alertMessage', 'Perfil actualizado!', 'success'); }
+  
+  var saveBtn = document.querySelector('#editProfileModal .btn-primary');
+  if (saveBtn) { saveBtn.disabled = true; saveBtn.innerHTML = '<span class="spinner-border spinner-border-sm me-2"></span>Guardando...'; }
+  
+  var res = await AuthSystem.updateUserProfile({name:name, company:company, phone:phone, settings:{currency:currency, language:language, theme:theme}});
+  
+  if (saveBtn) { saveBtn.disabled = false; saveBtn.innerHTML = '<i class="fas fa-save me-2"></i>Guardar'; }
+  
+  if (res.success) { 
+    editModal.hide(); 
+    loadProfile(); 
+    showAlert('alertMessage', 'Perfil actualizado correctamente!', 'success');
+    // Apply theme change
+    applyTheme(theme);
+  }
   else { showAlert('editAlert', res.message || 'Error.', 'error'); }
+}
+
+function applyTheme(theme) {
+  if (theme === 'dark') {
+    document.body.style.backgroundColor = '#1a1a2e';
+    document.body.style.color = '#ffffff';
+    var cards = document.querySelectorAll('.modern-card, .stat-card');
+    cards.forEach(function(card) {
+      card.style.backgroundColor = '#16213e';
+      card.style.color = '#ffffff';
+    });
+    var titles = document.querySelectorAll('.section-title, .page-title, .info-label, .info-value, .stat-value, .stat-label');
+    titles.forEach(function(t) {
+      t.style.color = '#ffffff';
+    });
+  } else {
+    document.body.style.backgroundColor = '#eef1f7';
+    document.body.style.color = '#2c3e50';
+    var cards = document.querySelectorAll('.modern-card, .stat-card');
+    cards.forEach(function(card) {
+      card.style.backgroundColor = 'white';
+      card.style.color = '';
+    });
+  }
 }
 async function changePassword() {
   var np = document.getElementById('newPassword').value;
